--- a/scss/layout/_base.scss
+++ b/scss/layout/_base.scss
@@ -96,3 +96,7 @@ ul {
 .popup {
     display: none;
 }
+
+#send {
+    display: none;
+}
